<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_connection" formatted="true">No connection…</string>
    <string name="return_to_connection" formatted="true">Connection is established!</string>
    <string name="no_photo_chosen" formatted="true">You need to choose at least one photo!</string>
    <string name="no_address_available" formatted="true">Troubles with location…</string>
    <string name="photo_count" formatted="true">%d photos</string>
    <string name="marks_count" formatted="true">%d marks found</string>
    <string name="add_mark">Add mark</string>
    <string name="add_photo">Add photo</string>
    <string name="remove">Remove</string>
    <string name="text">Text</string>
    <string name="isPublic">Visible to everyone</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="community_button">Profile</string>
    <string name="target_button">You on map</string>
    <string name="settings_button">Settings</string>
    <string name="mark">Mark</string>
    <string name="exit">Exit</string>
    <string name="name_surname" formatted="true" translatable="false">%s %s</string>
    <string name="location_fetching">Fetching your location…</string>
    <string name="saving_error">Error while saving…</string>
    <string name="error">Error!</string>
</resources>