<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/drag_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="18dp"
                android:theme="@style/Theme.FLocator.DragHandle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/add_mark"
                android:textColor="@color/tint"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:textColor="@color/font"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_photo_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/tint"
                    android:text="@string/add_photo"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/add_image"
                    app:iconGravity="textStart"
                    app:iconSize="12dp"
                    app:iconTint="@color/white"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/remove_photo_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_between_btns"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/remove"
                    android:textColor="@color/danger"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/trash_image"
                    app:iconGravity="textStart"
                    app:iconSize="12dp"
                    app:iconTint="@color/danger"
                    app:strokeColor="@color/danger"
                    app:strokeWidth="1dp"
                    android:maxLines="1"
                    android:ellipsize="end" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/camera_placeholder"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="24dp"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/camera_image" />

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/photo_carousel"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/text"
                app:hintTextColor="@color/font"
                app:boxStrokeColor="@color/tint"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/markText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textColor="@color/font"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/isPublicCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/isPublic" />

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="vertical"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_mark_btn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/tint"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    app:cornerRadius="10dp"
                    app:rippleColor="#5757CD" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_mark_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textColor="@color/danger"
                    app:cornerRadius="10dp"
                    app:rippleColor="#E37676" />
            </LinearLayout>

            <ru.flocator.core_design.views.LoaderImageView
                android:id="@+id/loader"
                android:layout_width="match_parent"
                android:layout_height="140dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>